Logout and second click marker bug fix
I have fixed the logout and enterprise access in home and map but also the bug when you click twice on the same marker that it was not showing up.

--- a/mapa/css/map.css
+++ b/mapa/css/map.css
@@ -181,12 +181,15 @@ a.active.trigger {
 	padding: 5px 11px 8px 11px;
 	z-index: 1;
 	position: absolute;
-	bottom: 15px;
-	right: 42px;
+	bottom: 22px;
+	right: 52px;
+	box-shadow:0px 1px 1px #666666; 
+	-webkit-box-shadow:0px 1px 1px #666666; 
+	-moz-box-shadow:0px 1px 1px #666666;
 }
 
 #panelInfo {
-	opacity: 0.85;
+	opacity: 0.90;
 	background: #ffffff;
 	border: 1px solid transparent;
 	text-align: center;
@@ -239,16 +242,26 @@ a.active.trigger {
 	margin: 0 -45px;
 	margin-top: 20px;
 }
-
-#panel_log {
-	position: absolute;
-	top: -15px;
-	right: 285px;/*373px;*/
-	z-index: 5;
+#logout:hover{
 	color: black;
-	height: 21px;
+}
+#logout {
+	position: absolute;
+	top: 23px;
+	right: 100px;
+	z-index: 2 !important;
+	color: #666666;	
 	margin: 0 -45px;
-	margin-top: 20px;
+	margin-top: 21px;
+	font-size: 24px; 
+	background-color:#FFFFFF; 
+	padding: 6px; 
+	border-radius: 2px; 
+	box-shadow:0px 1px 1px #b6b6b6; 
+	-webkit-box-shadow:0px 1px 1px #b6b6b6; 
+	-moz-box-shadow:0px 1px 1px #b6b6b6;
+	padding-left: 9px;
+	padding-right: 8px;
 }
 
 #content_inf {
@@ -263,15 +276,18 @@ a.active.trigger {
 
 #information {
 	margin: 13% auto;
-        width: 200px;
-        font-family: Roboto;
-        font-size: 14px;
-        font-weight: 300;
-        opacity: 0.95;
+	width: 200px;
+	font-family: Roboto;
+	font-size: 14px;
+	font-weight: 300;
+	opacity: 0.95;
 	background: #4d90fe;
-        color:#fff;
-        padding: 30px 10px 20px 20px;
-        border: 1px solid transparent;
+	color: #fff;
+	padding: 30px 10px 20px 20px;
+	box-shadow: 0px 1px 1px #666666;
+	-webkit-box-shadow: 0px 1px 1px #666666;
+	-moz-box-shadow: 0px 1px 1px #666666;
+	border-radius: 6px; 
 }
 
 .loader {
